UtahLiveDataTest/src/objects/STGFOALead__c.object
<CustomObject>
    <description>[Business]  All the Opportunities migrated from the Grant.gov are stored in this staging table</description>
    <fields>
        <fullName>AdditionalEligibilityInformation__c</fullName>
        <label>Additional Eligibility Information</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AdditionalInformationURLText__c</fullName>
        <label>Additional Information URL Text</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgencyContact__c</fullName>
        <label>Agency Contact</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AgencyEmailAddress__c</fullName>
        <label>Agency Email Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyEmailDescriptor__c</fullName>
        <label>Agency Email Descriptor</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyMailingAddress__c</fullName>
        <label>Agency Mailing Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationsDueDateExplanation__c</fullName>
        <label>Applications Due Date Explanation</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApplicationsDueDate__c</fullName>
        <label>Applications due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ArchiveDate__c</fullName>
        <label>Archive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AwardCeiling__c</fullName>
        <label>Award Ceiling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AwardFloor__c</fullName>
        <label>Award Floor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFDANumber__c</fullName>
        <label>CFDA Number</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CategoryExplanation__c</fullName>
        <label>Category Explanation</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CategoryOfFundingActivity__c</fullName>
        <label>Category Of Funding Activity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AG: Agriculture</fullName>
                </value>
                <value>
                    <fullName>AR: Arts</fullName>
                </value>
                <value>
                    <fullName>BC: Business and Commerce</fullName>
                </value>
                <value>
                    <fullName>CD: Community Development</fullName>
                </value>
                <value>
                    <fullName>CP: Consumer Protection</fullName>
                </value>
                <value>
                    <fullName>DPR: Disaster Prevention and Relief</fullName>
                </value>
                <value>
                    <fullName>ED: Education</fullName>
                </value>
                <value>
                    <fullName>ELT: Employment, Labor and Training</fullName>
                </value>
                <value>
                    <fullName>EN: Energy</fullName>
                </value>
                <value>
                    <fullName>ENV: Environment</fullName>
                </value>
                <value>
                    <fullName>FN: Food and Nutrition</fullName>
                </value>
                <value>
                    <fullName>HL: Health</fullName>
                </value>
                <value>
                    <fullName>HO: Housing</fullName>
                </value>
                <value>
                    <fullName>HU: Humanities</fullName>
                </value>
                <value>
                    <fullName>ISS:  Income Security and Social Service</fullName>
                </value>
                <value>
                    <fullName>IS: Information and Statistics</fullName>
                </value>
                <value>
                    <fullName>LJL: Law, Justice and Legal Services</fullName>
                </value>
                <value>
                    <fullName>NR: Natural Resources</fullName>
                </value>
                <value>
                    <fullName>RD: Regional Development</fullName>
                </value>
                <value>
                    <fullName>ST: Science and Technology</fullName>
                </value>
                <value>
                    <fullName>T: Transportation</fullName>
                </value>
                <value>
                    <fullName>O: Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CostSharing__c</fullName>
        <label>Cost Sharing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EligibilityCategory__c</fullName>
        <label>Eligibility Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>99: Unrestricted</fullName>
                </value>
                <value>
                    <fullName>00: State governments</fullName>
                </value>
                <value>
                    <fullName>01: County governments</fullName>
                </value>
                <value>
                    <fullName>02: City or township governments</fullName>
                </value>
                <value>
                    <fullName>04: Special district governments</fullName>
                </value>
                <value>
                    <fullName>05: Independent school districts</fullName>
                </value>
                <value>
                    <fullName>06: Public and State higher education</fullName>
                </value>
                <value>
                    <fullName>07: Native American tribal governments</fullName>
                </value>
                <value>
                    <fullName>08: Public housing authorities</fullName>
                </value>
                <value>
                    <fullName>11: Native American tribal organizations</fullName>
                </value>
                <value>
                    <fullName>12: Nonprofits with 501(c)(3) status</fullName>
                </value>
                <value>
                    <fullName>13: Nonprofits without 501(c)(3) status</fullName>
                </value>
                <value>
                    <fullName>20: Private institution higher education</fullName>
                </value>
                <value>
                    <fullName>21: Individuals</fullName>
                </value>
                <value>
                    <fullName>22: For-profit organizations</fullName>
                </value>
                <value>
                    <fullName>23: Small businesses</fullName>
                </value>
                <value>
                    <fullName>25: Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EstimatedTotalProgramFunding__c</fullName>
        <label>Estimated Total Program Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpectedNumberofAwards__c</fullName>
        <label>Expected Number of Awards</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FederalAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agency that offered grant</description>
        <label>Federal Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>STGFOALeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FundingInstrumentType__c</fullName>
        <label>Funding Instrument Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>G: Grant</fullName>
                </value>
                <value>
                    <fullName>CA: Cooperative Agreement</fullName>
                </value>
                <value>
                    <fullName>O: Other</fullName>
                </value>
                <value>
                    <fullName>PC: Procurement Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingOppURL__c</fullName>
        <label>Link to Additional Information</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FundingOpportunityDescription__c</fullName>
        <label>Funding Opportunity Description</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FundingOpportunityNumber__c</fullName>
        <externalId>true</externalId>
        <label>Funding Opportunity Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FundingOpportunityTitle__c</fullName>
        <label>Funding Opportunity Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ModificationNumber__c</fullName>
        <label>ModificationNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PostedDate__c</fullName>
        <description>Opportunity Posted Date</description>
        <label>Posted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SourceStatus__c</fullName>
        <label>Source Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grants.gov</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>STG: FOA Lead</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FundingOpportunityNumber__c</columns>
        <columns>AgencyEmailAddress__c</columns>
        <columns>ArchiveDate__c</columns>
        <columns>FederalAgency__c</columns>
        <columns>AwardCeiling__c</columns>
        <columns>AwardFloor__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>STGLEAD-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>STG FOA Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>